charts/argocd/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-virtualservice
  namespace: argocd
spec:
  gateways:
    - argocd/argo-gateway
  hosts:
    - argo.kamuridesu.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: >-
              argo-cd-argocd-server.argocd.svc.cluster.local
            port:
              number: 3000
          weight: 100
